--- a/KinoMonster/Assets/CSS/style.css
+++ b/KinoMonster/Assets/CSS/style.css
@@ -276,6 +276,59 @@ ul.menu li a:hover {
     border-radius: 5px;
 }
 
+.info_film {
+    margin-bottom: 5%;
+    background-color: #f9f9f9;
+    padding: 5%;
+    height: 270px;
+}
+
+.info_film img {
+    float: left;
+    margin-right: 2%;
+    border-radius: 5px;
+    border: solid 5px #dad7d5;
+    width: 25%;
+}
+
+.button {
+    background-color: #7268ad;
+    padding: 2%;
+    color: white;
+    border-radius: 5px;
+    float: right;
+    margin-top: 5%;
+    clear: both;
+    font-size: 0.8em;
+}
+
+.button a {
+    color: white;
+}
+
+table {
+    width: 100%;
+    border: solid 1px #f4f4f4;
+}
+
+td {
+    padding: 2%;
+    border: solid 1px #f4f4f4;
+}
+
+td img {
+    width: 60px;
+    vertical-align: idle;
+}
+
+.center {
+    text-align: center;
+}
+
+.rating {
+    font-weight: bold;
+}
+
 .footer {
     width: 100%;
     height: 100px;
@@ -300,4 +353,13 @@ ul.menu li a:hover {
 
 .footer p {
     padding: 0 0 10px 0;
+}
+
+/* CSS Mobile */
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 568px) {
+    .header {
+        background-color: #257965;
+    }
 }
