--- a/KinoMonster Bootstrap/Assets/css/style.css
+++ b/KinoMonster Bootstrap/Assets/css/style.css
@@ -83,6 +83,46 @@ html, body {
     margin-top: 8%;
 }
 
+.panel {
+    border: none;
+}
+
+.panel-body {
+    background-color: #f9f9f9;
+}
+
+.panel-info>.panel-heading {
+    background-color: #f0ad4e;
+    color: white;
+    border-color: transparent;
+}
+
+.sideber-header {
+    font-size: 120%;
+    letter-spacing: 2px;
+}
+
+.form-control {
+    font-size: 14px;
+}
+
+.input-lg {
+    font-size: 14px;
+}
+
+.form-control {
+    border-radius: 0px;
+}
+
+.list-group-item-warning {
+    color: #8a6d3b;
+    background-color: #f9f9f9;
+}
+
+.badge {
+    background-color: #000000;
+}
+
 footer {
     color: #666;
     background-color: #222;
