--- a/KinoMonster Bootstrap/Assets/css/style.css
+++ b/KinoMonster Bootstrap/Assets/css/style.css
@@ -124,6 +124,22 @@ html, body {
     background-color: #000000;
 }
 
+.info-block {
+    font-size: 120%;
+}
+
+.info-block .badge {
+    font-size: 80%;
+}
+
+.info-block span {
+    margin-right: 3%;
+}
+
+textarea.form-control {
+    height: 200px;
+}
+
 footer {
     color: #666;
     background-color: #222;
